--- a/uh/siswa.html
+++ b/uh/siswa.html
@@ -84,6 +84,9 @@
 let soal = {};
 const soalURL = "https://oneon360.github.io/web/uh/soal.json";
 
+// URL Web App dari Google Apps Script
+const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbxxxxx/exec"; // ganti dengan URL Web App Anda
+
 // Ambil soal dari JSON GitHub
 async function fetchSoal() {
   try {
@@ -100,7 +103,6 @@ async function loadQuestions(){
   const name = document.getElementById("studentName").value.trim();
   if(!subject || !name){ alert("Isi nama & pilih mapel!"); return; }
 
-  // pastikan soal sudah di-load
   if(Object.keys(soal).length === 0){
     await fetchSoal();
   }
@@ -117,25 +119,9 @@ async function loadQuestions(){
     let html = `<div class="question-box">
       <p><b>${i+1}. ${q.text}</b></p>`;
 
-    if(q.type === "text" || q.type === "paragraph"){
-      html += q.options.map((opt,j)=>`
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="q${i}" value="${["a","b","c","d"][j]}">
-          <label class="form-check-label">${opt}</label>
-        </div>`).join("");
-    }
-
-    if(q.type === "image"){
-      html += `<img src="${q.image}" alt="Soal Gambar">`;
-      html += q.options.map((opt,j)=>`
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="q${i}" value="${["a","b","c","d"][j]}">
-          <label class="form-check-label">${opt}</label>
-        </div>`).join("");
-    }
-
-    if(q.type === "table"){
-      html += q.table;
+    if(q.type === "text" || q.type === "paragraph" || q.type === "image" || q.type === "table"){
+      if(q.image) html += `<img src="${q.image}" alt="Soal Gambar">`;
+      if(q.table) html += q.table;
       html += q.options.map((opt,j)=>`
         <div class="form-check">
           <input class="form-check-input" type="radio" name="q${i}" value="${["a","b","c","d"][j]}">
@@ -150,25 +136,45 @@ async function loadQuestions(){
   document.getElementById("quizForm").classList.remove("d-none");
 }
 
-function submitAnswers(){
+async function submitAnswers(){
   const subject = document.getElementById("subjectSelect").value;
   const name = document.getElementById("studentName").value.trim();
   let score = 0;
 
   soal[subject].forEach((q,i)=>{
-    let ans;
     let sel = document.querySelector(`input[name="q${i}"]:checked`);
-    if(sel) ans = sel.value;
-    if(ans && ans.toLowerCase() === q.answer.toLowerCase()) score += 10;
+    if(sel && sel.value.toLowerCase() === q.answer.toLowerCase()){
+      score += 10;
+    }
   });
 
   document.getElementById("result").classList.remove("d-none");
   document.getElementById("result").innerText = `${name} mendapat skor ${score}`;
 
+  // Simpan lokal (optional, biar siswa tetap lihat histori di HP)
   let hasil = JSON.parse(localStorage.getItem("hasilSiswa")) || [];
   hasil.push({nama:name, mapel:subject, skor:score, tanggal:new Date().toLocaleString()});
   localStorage.setItem("hasilSiswa", JSON.stringify(hasil));
+
+  // Kirim ke Google Sheets via Web App
+  try {
+    await fetch(WEB_APP_URL, {
+      method: "POST",
+      body: JSON.stringify({
+        nama: name,
+        mapel: subject,
+        skor: score
+      }),
+      headers: {
+        "Content-Type": "application/json"
+      }
+    });
+    console.log("Data berhasil dikirim ke Google Sheets");
+  } catch(err){
+    console.error("Gagal kirim data:", err);
+  }
 }
 </script>
+
 </body>
 </html>
