--- a/uh/skor.html
+++ b/uh/skor.html
@@ -25,7 +25,7 @@
 
 <script>
 const ADMIN_PASSWORD = "12345";  
-const WEB_APP_URL = "https://script.google.com/a/macros/guru.sd.belajar.id/s/AKfycbwpHJY63zAtFdSG85xKH8eRTfk4RC8JLSzOaSmqvl50dOFllomVgYHSaikxSu1kJew/exec"; // ganti dengan URL Web App Anda
+const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbwpHJY63zAtFdSG85xKH8eRTfk4RC8JLSzOaSmqvl50dOFllomVgYHSaikxSu1kJew/exec"; // ganti dengan URL Web App Anda
 
 let hasil = []; // akan diisi dari Google Sheets
 
