--- a/uh/siswa.html
+++ b/uh/siswa.html
@@ -58,7 +58,7 @@ let soal = {};
 const soalURL = "https://oneon360.github.io/web/uh/soal.json";
 
 // Ganti dengan URL Web App Anda
-const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbwuERqx4rx2qqRO0xipSENzwqSfMbPbbaBfa6nLBoAAk80VVlvvvmRvjZqo9lDwcJ06eg/exec";
+const WEB_APP_URL = "https://cors.ssss.fun/https://script.google.com/macros/s/AKfycbwuERqx4rx2qqRO0xipSENzwqSfMbPbbaBfa6nLBoAAk80VVlvvvmRvjZqo9lDwcJ06eg/exec";
 
 async function fetchSoal(){
   try{
