--- a/uh/index.html
+++ b/uh/index.html
@@ -16,7 +16,7 @@
     <h2 class="mb-4">Portal Ulangan Kelas 6</h2>
     <a href="admin.html" class="btn btn-danger mb-2">🔑 Halaman Admin (Input Soal)</a><br>
     <a href="siswa.html" class="btn btn-primary mb-2">📝 Halaman Ulangan (Siswa)</a><br>
-    <a href="skor.html" class="btn btn-success">📊 Rekap Nilai (Admin)</a>
+    <a href="xxx.html" class="btn btn-success">📊 Rekap Nilai (Admin)</a>
   </div>
 </div>
 </body>
