--- a/uh/admin.html
+++ b/uh/admin.html
@@ -59,7 +59,7 @@
 </div>
 
 <script>
-const ADMIN_PASSWORD="12345";
+const ADMIN_PASSWORD="@@@nCZZa2";
 let soal = JSON.parse(localStorage.getItem("soalData")) || {
   "Pendidikan Pancasila": [],
   "Bahasa Indonesia": [],
