--- a/uh/uh6b.html
+++ b/uh/uh6b.html
@@ -56,7 +56,7 @@ img{max-width:100%;height:auto;display:block;margin:10px auto;max-height:300px;o
 
 <script>
 let soal = {};
-const soalURL = "https://oneon360.github.io/web/uh/soal.json";
+const soalURL = "https://oneon360.github.io/web/uh/bi-ipas.json";
 
 // Ganti dengan URL Web App Anda
 const WEB_APP_URL = "https://cors.ssss.fun/https://script.google.com/macros/s/AKfycbwuERqx4rx2qqRO0xipSENzwqSfMbPbbaBfa6nLBoAAk80VVlvvvmRvjZqo9lDwcJ06eg/exec";
