--- a/uh/play/siswa.html
+++ b/uh/play/siswa.html
@@ -81,7 +81,7 @@ img{max-width:100%;height:auto;display:block;margin:10px auto;max-height:300px;o
 <script>
 let soal = {};
 let currentName = "";
-const soalURL = "https://oneon360.github.io/web/uh/bi-ipas.json";
+const soalURL = "https://oneon360.github.io/web/uh/soal.json";
 const siswaURL = "https://oneon360.github.io/web/uh/play/nama.json";
 // Ganti dengan URL Web App Anda
 const WEB_APP_URL = "https://script.google.com/macros/s/AKfycby52Cz1GFVAlQOH0PsTGaK09eCrv1dS8kkxdWaQD9F2kdDwTUNuLfrePEeybXp55gef/exec";
