--- a/uh/play/skor.html
+++ b/uh/play/skor.html
@@ -10,6 +10,7 @@
     body { background:#f8f9fa; }
     .small-muted { font-size:0.85rem; color:#666; }
     td .btn-sm { padding:2px 6px; font-size:0.75rem; }
+    .mapel-badge { cursor:pointer; }
   </style>
 </head>
 <body class="bg-light">
@@ -30,6 +31,10 @@
       </div>
 
       <div id="rekapContent"></div>
+
+      <h5 class="mt-4">⚙️ Pengaturan Mapel Aktif</h5>
+      <div id="mapelContent" class="mb-3"></div>
+
       <div id="debugLog" class="mt-3 small text-muted"></div>
     </div>
   </div>
@@ -40,12 +45,14 @@ const ADMIN_PASSWORD = "12345";
 const WEB_APP_URL = "https://script.google.com/macros/s/AKfycby52Cz1GFVAlQOH0PsTGaK09eCrv1dS8kkxdWaQD9F2kdDwTUNuLfrePEeybXp55gef/exec"; 
 
 let hasil = [];
+let mapelAktif = [];
 
 function loginAdmin(){
   if(document.getElementById("adminPass").value === ADMIN_PASSWORD){
     document.getElementById("loginBox").classList.add("d-none");
     document.getElementById("rekapPanel").classList.remove("d-none");
     fetchData();
+    fetchMapel();
   } else {
     alert("Password salah!");
   }
@@ -194,6 +201,53 @@ async function resetMapel(nama,mapel){
       setDebug(result.message);
     } else alert("Gagal: "+result.message);
   } catch(err){ alert(err.message); }
+}
+
+/* ---------------- Pengaturan Mapel Aktif ---------------- */
+async function fetchMapel(){
+  try{
+    const res = await fetch(WEB_APP_URL+"?action=mapel");
+    const json = await res.json();
+    if(json.status==="success"){
+      mapelAktif = json.aktif;
+      renderMapel();
+    }
+  }catch(e){ console.error(e); }
+}
+
+function renderMapel(){
+  const container = document.getElementById("mapelContent");
+  container.innerHTML = "";
+  const semuaMapel = ["Pendidikan Pancasila","Bahasa Indonesia","Matematika","IPAS","Seni Rupa"];
+
+  semuaMapel.forEach(m=>{
+    const aktif = mapelAktif.includes(m);
+    container.innerHTML += `
+      <span class="badge rounded-pill ${aktif?'bg-success':'bg-secondary'} mapel-badge me-2 mb-2"
+        onclick="toggleMapel('${m}')">${m} (${aktif?'ON':'OFF'})</span>
+    `;
+  });
+}
+
+async function toggleMapel(mapel){
+  const aktif = mapelAktif.includes(mapel) ? false : true;
+  try{
+    const res = await fetch(WEB_APP_URL, {
+      method:"POST",
+      headers:{"Content-Type":"application/json"},
+      body: JSON.stringify({action:"setMapel", mapel:mapel, aktif:aktif})
+    });
+    const result = await res.json();
+    if(result.status==="success"){
+      if(aktif){
+        if(!mapelAktif.includes(mapel)) mapelAktif.push(mapel);
+      }else{
+        mapelAktif = mapelAktif.filter(m=>m!==mapel);
+      }
+      renderMapel();
+      setDebug(result.message);
+    }else alert("Gagal: "+result.message);
+  }catch(err){ alert(err.message); }
 }
 </script>
 </body>
